# wxe-project

./: README.md
wxe-project/: README.md
wxe-project/hypr-conf/: hyprland.conf  wallpaperwofi.sh
wxe-project/hypr-conf/waybar/: style.css
wxe-project/wxe-hello/: CMakeLists.txt  main.cpp  main.qml
wxe-project/wxe-sway-conf/mako/: config
wxe-project/wxe-sway-conf/rofi/: config.rasi
wxe-project/wxe-sway-conf/sway/: config
wxe-project/wxe-sway-conf/sway/script/: wall.py
wxe-project/wxe-sway-conf/waybar/: config
wxe-project/wxe-sway-conf/wofi/: style.css
